ont-d2rq: cosmetic: just comments + return back mysql-connection call (implicitly), remove unsafe in tools, etc